Fixed word-break on tables

--- a/resources/sass/elements/tables.scss
+++ b/resources/sass/elements/tables.scss
@@ -55,7 +55,7 @@
 
             td {
                 @apply py-1 px-2;
-                work-break: break-all;
+                word-break: break-all;
             }
         }
     }
